# GFS_CORE

./: .gitignore  Cargo.toml  Makefile  release.toml
gfs_lib_contract/: Cargo.toml
gfs_lib_contract/src/: lib.rs
gfs_lib_contract/src/attributes/: ContractElem.rs  ContractModel.rs  ContractReference.rs  ContractRules.rs  ContractTerms.rs  Dependence.rs  EventIterator.rs  RelatedContracts.rs  ResultSet.rs  mod.rs
gfs_lib_contract/src/attributes/event_iterators/: ANNEventIterator.rs  FXOUTEventIterator.rs  LAMEventIterator.rs  NAMEventIterator.rs  PAMEventIterator.rs  STKEventIterator.rs  SWPPVEventIterator.rs  mod.rs
gfs_lib_contract/src/attributes/reference_role/: ReferenceRole.rs
gfs_lib_contract/src/contracts/: Ann.rs  Fxout.rs  Lam.rs  Nam.rs  Pam.rs  Stk.rs  Swaps.rs  Swppv.rs  mod.rs
gfs_lib_contract/src/error/: ErrorContract.rs  mod.rs
gfs_lib_contract/src/error/error_types/: ErrorPayOffComputation.rs  mod.rs
gfs_lib_contract/src/events/: ContractEvent.rs  ContractEvent_old.rs  EventFactory.rs  EventFactoryOld.rs
gfs_lib_contract/src/exceptions/: ContractTypeUnknownException.rs
gfs_lib_contract/src/functions/: PayOffFunction.rs  StatesTransitionFunction.rs  mod.rs
gfs_lib_contract/src/functions/ann/: PayOffFunctionANN.rs  StatesTransitionFunctionANN.rs  mod.rs
gfs_lib_contract/src/functions/fxout/: PayOffFunctionFXOUT.rs  StatesTransitionFunctionFXOUT.rs  mod.rs
gfs_lib_contract/src/functions/lam/: PayOffFunctionLAM.rs  StatesTransitionFunctionLAM.rs
gfs_lib_contract/src/functions/nam/: PayOffFunctionNAM.rs  StatesTransitionFunctionNAM.rs  mod.rs
gfs_lib_contract/src/functions/pam/: PayOffFunctionPAM.rs  StatesTransitionFunctionPAM.rs
gfs_lib_contract/src/functions/stk/: PayOffFunctionSTK.rs  StatesTransitionFunctionSTK.rs  mod.rs
gfs_lib_contract/src/functions/swaps/: PayOffFunctionSWAPS.rs  StatesTransitionFunctionSWAPS.rs  mod.rs
gfs_lib_contract/src/functions/swppv/: PayOffFunctionSWPPV.rs  StatesTransitionFunctionSWPPV.rs  mod.rs
gfs_lib_contract/src/states_space/: StatesSpace.rs
gfs_lib_contract/src/time/: CycleAdjuster.rs  ScheduleFactory.rs
gfs_lib_contract/src/traits/: TraitContractModel.rs  TraitExternalData.rs  TraitExternalEvent.rs  TraitPayOffFunction.rs  TraitStateTransitionFunction.rs  _TraitRiskFactorModel.rs
gfs_lib_contract/src/util/: CommonUtils.rs  Constants.rs  RedemptionUtils.rs  ResultsStruct.rs  mod.rs
gfs_lib_contract/tests/: test_ann.rs  test_fxout.rs  test_lam.rs  test_nam.rs  test_pam.rs  test_stk.rs  test_swaps.rs  test_swppv.rs
gfs_lib_contract/tests/common_test_funcs/: CompareTestResults.rs  mod.rs  test_json_loader.rs
gfs_lib_contract/tests/test_sets/: actus-tests-ad0.json  actus-tests-ann-converted.json  actus-tests-ann.json  actus-tests-bcs.json  actus-tests-capfl.json  actus-tests-fxout-converted.json  actus-tests-fxout.json  actus-tests-lam-converted.json  actus-tests-lam.json  actus-tests-lax.json  actus-tests-nam-converted.json  actus-tests-nam.json  actus-tests-pam-converted.json  actus-tests-pam.json  actus-tests-stk-converted.json  actus-tests-stk.json  actus-tests-swaps-converted.json  actus-tests-swppv-converted.json  repreparation_json.py
gfs_lib_core/: Cargo.toml
gfs_lib_measure/: Cargo.toml
gfs_lib_measure/src/: lib.rs
gfs_lib_measure/src/measures/: mod.rs
gfs_lib_measure/src/measures/core/: core_structures.rs  mod.rs
gfs_lib_measure/src/measures/nominal/: mod.rs  nominal.rs
gfs_lib_portfolio/: Cargo.toml
gfs_lib_portfolio/src/portfolio/: Portfolio.rs  mod.rs
gfs_lib_portfolio/tests/test_sets/: actus-tests-portf-converted.json
gfs_lib_simulation/: Cargo.toml
gfs_lib_terms/: Cargo.toml
gfs_lib_terms/src/: lib.rs
gfs_lib_terms/src/error/: ErrorTerms.rs  mod.rs
gfs_lib_terms/src/macros/: macro_struct_bool.rs  macro_struct_f64.rs  macro_struct_isocycle.rs  macro_struct_isodatetime.rs  macro_struct_isoperiod.rs  macro_struct_string.rs  macro_struct_vec_isodatetime.rs
gfs_lib_terms/src/non_terms/: EndTime.rs  EventTime.rs  LastInterestPeriod.rs  PayOff.rs  ScheduleFactoryStartTime.rs  ScheduleTime.rs  mod.rs
gfs_lib_terms/src/phantom_terms/: PhantomF64.rs  PhantomIsoCycle.rs  PhantomIsoDatetime.rs  PhantomIsoPeriod.rs  mod.rs
gfs_lib_terms/src/terms/grp_boundary/: BoundaryCrossedFlag.rs  BoundaryDirection.rs  BoundaryEffect.rs  BoundaryLegInitiallyActive.rs  BoundaryMonitoringAnchorDate.rs  BoundaryMonitoringCycle.rs  BoundaryMonitoringEndDate.rs  BoundaryValue.rs
gfs_lib_terms/src/terms/grp_calendar/: BusinessDayAdjuster.rs  Calendar.rs  EndOfMonthConvention.rs
gfs_lib_terms/src/terms/grp_contract_identification/: ContractRole.rs  StatusDate.rs
gfs_lib_terms/src/terms/grp_counterparty/: ContractPerformance.rs  CoverageOfCreditEnhancement.rs  CreditEventTypeCovered.rs  DelinquencyPeriod.rs  DelinquencyRate.rs  GracePeriod.rs  GuaranteedExposure.rs  NonPerformingDate.rs  PrepaymentPeriod.rs  Seniority.rs
gfs_lib_terms/src/terms/grp_dividend/: CycleAnchorDateOfDividend.rs  CycleAnchorDateOfDividendPayment.rs  CycleOfDividend.rs  CycleOfDividendPayment.rs  ExDividendDate.rs  MarketObjectCodeOfDividends.rs  NextDividendPaymentAmount.rs
gfs_lib_terms/src/terms/grp_fees/: CycleAnchorDateOfFee.rs  CycleOfFee.rs  FeeAccrued.rs  (+2 more)
gfs_lib_terms/src/traits/: TraitBusinessDayCalendar.rs  TraitEndOfMonthConvention.rs  TraitOptionExt.rs  mod.rs
gfs_lib_terms/src/utils/: ProvideFuncs.rs  mod.rs
gfs_lib_terms_proc_macro/: Cargo.toml
lib_actus_terms/: Cargo.toml
lib_actus_terms/src/macros/: macro_struct_f64.rs  macro_struct_string.rs
lib_actus_terms/src/non_terms/: LastInterestPeriod.rs
lib_actus_terms/src/phantom_terms/: PhantomF64.rs
lib_actus_terms/src/traits/: TraitCountConvention.rs
libs/lib_actus_core/: Cargo.toml
libs/lib_actus_core/src/: lib.rs
libs/lib_actus_core/test_sets/: actus-tests-ann.json  actus-tests-cec.json
libs/lib_actus_risk_factor/: Cargo.toml
libs/lib_actus_risk_factor/src/: lib.rs
libs/lib_actus_terms/: Cargo.toml
libs/lib_actus_terms/src/: ContractTerms.rs  lib.rs
main/: Cargo.toml
main/src/: main.rs
(+1996 files in other folders)
