[workspace]
members = [
            "gfs_lib_contract",
            "gfs_lib_portfolio",
            "gfs_lib_simulation",
            "gfs_lib_terms",
            "gfs_lib_terms_proc_macro",
            "gfs_lib_types",
]
exclude = []

resolver = "2"

# Métadonnées communes à toutes les crates du workspace
[workspace.package]
version = "0.0.6"
authors = ["Charles-Emmanuel Teuf <charles-emmanuel.teuf@protonmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gearfinancialsystem/GFS_CORE"
keywords = ["gfs", "internal"]
