[package]
name = "gfs_lib_contract"
version = "0.1.0"
edition = "2021"

[lib]
name = "gfs_lib_contract"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
gfs_lib_types = { path = "../gfs_lib_types" }
gfs_lib_terms = { path = "../gfs_lib_terms" }
chrono = "0.4.41"
regex = "1.11.1"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
dev = []