[package]
name = "gfs_lib_core"
version.workspace = true  # Hérite de la version du workspace
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
gfs_lib_types = { path = "../gfs_lib_types" }
gfs_lib_terms = { path = "../gfs_lib_terms" }
gfs_lib_contract = { path = "../gfs_lib_contract" }
gfs_lib_portfolio = { path = "../gfs_lib_portfolio" }
gfs_lib_simulation = { path = "../gfs_lib_simulation" }
gfs_lib_terms_proc_macro = { path = "../gfs_lib_terms_proc_macro" }

