[package]
name = "gfs_lib_measure"
version.workspace = true  # Hérite de la version du workspace
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Internal crate for GFS project. Not intended for standalone use."

[lib]
name = "gfs_lib_measure"
crate-type = ["rlib", "cdylib"]

[dependencies]
gfs_lib_contract = { version = "0.0.17", path = "../gfs_lib_contract", package = "gfs_lib_contract" }
gfs_lib_portfolio = { version = "0.0.17", path = "../gfs_lib_portfolio", package = "gfs_lib_portfolio" }
chrono = "0.4.41"
regex = "1.11.1"

