[package]
name = "gfs_lib_portfolio"
version.workspace = true  # Hérite de la version du workspace
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[lib]
name = "gfs_lib_portfolio"
crate-type = ["rlib", "cdylib"]

[dependencies]
gfs_lib_contract = { path = "../gfs_lib_contract" }
chrono = "0.4.41"
regex = "1.11.1"