[package]
name = "gfs_lib_terms"
version.workspace = true  # Hérite de la version du workspace
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Internal crate for GFS project. Not intended for standalone use."

[lib]
name = "gfs_lib_terms"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
gfs_lib_types = { version = "0.0.18", path = "../gfs_lib_types", package = "gfs_lib_types" }
chrono = "0.4.41"
regex = "1.11.1"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

