[package]
name = "gfs_lib_terms_proc_macro"
version.workspace = true  # Hérite de la version du workspace
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Internal crate for GFS project. Not intended for standalone use."

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
[package.metadata.release]
tag = false  # Disable individual crate tags
