[package]
name = "lib_actus_terms"
version = "0.1.0"
edition = "2024"


[lib]
name = "lib_actus_terms"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
lib_actus_types = { path = "../../libs-rust/lib_actus_types" }
chrono = "0.4.41"
regex = "1.11.1"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"