[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
lib_actus_core = { path = "../libs/lib_actus_core" }
lib_actus_risk_factor = { path = "../libs/lib_actus_risk_factor" }
lib_actus_terms = { path = "../libs/lib_actus_terms" }
lib_actus_types = { path = "../libs/lib_actus_types" }
lib_actus_events = { path = "../libs/lib_actus_events" }
lib_actus_states_space = { path = "../libs/lib_actus_states_space" }

