[package]
name = "lib_actus_risk_factor"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib_actus_risk_factor"
crate-type = ["rlib", "cdylib"]

[dependencies]
lib_actus_core = { path = "../../libs/lib_actus_core" }
chrono = "0.4.41"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"